--- a/style.css
+++ b/style.css
@@ -104,10 +104,10 @@ li {
 
 #preloader {
     overflow: hidden;
-    background: #7450fe;
-    background: -webkit-linear-gradient(to right, #7450fe, #21d397);
-    background: -webkit-linear-gradient(left, #7450fe, #21d397);
-    background: linear-gradient(to right, #7450fe, #21d397);
+    background: #5271ff;
+    background: -webkit-linear-gradient(to right, #5271ff, #7ed957);
+    background: -webkit-linear-gradient(left, #5271ff, #7ed957);
+    background: linear-gradient(to right, #5271ff, #7ed957);
     height: 100%;
     left: 0;
     position: fixed;
@@ -245,7 +245,7 @@ li {
 }
 
 #scrollUp:hover {
-    background-color: #7450fe;
+    background-color: #5271ff;
 }
 
 .section-heading {
@@ -309,14 +309,14 @@ li {
     padding: 0 15px;
     width: 230px;
     height: 46px;
-    border-left: 2px solid #7450fe;
-    border-right: 2px solid #21d397;
+    border-left: 2px solid #5271ff;
+    border-right: 2px solid #7ed957;
     box-sizing: border-box;
     background-position: 0 0, 0 100%;
     background-repeat: no-repeat;
     background-size: 100% 2px;
-    background-image: -webkit-linear-gradient(left, #7450fe 0%, #21d397 100%), -webkit-linear-gradient(left, #7450fe 0%, #21d397 100%);
-    background-image: linear-gradient(to right, #7450fe 0%, #21d397 100%), linear-gradient(to right, #7450fe 0%, #21d397 100%);
+    background-image: -webkit-linear-gradient(left, #5271ff 0%, #7ed957 100%), -webkit-linear-gradient(left, #5271ff 0%, #7ed957 100%);
+    background-image: linear-gradient(to right, #5271ff 0%, #7ed957 100%), linear-gradient(to right, #5271ff 0%, #7ed957 100%);
     -webkit-transition-duration: 1000ms;
     transition-duration: 1000ms;
     position: relative;
@@ -327,10 +327,10 @@ li {
     color: #fff;
     -webkit-transition-duration: 500ms;
     transition-duration: 500ms;
-    background: #7450fe;
-    background: -webkit-linear-gradient(to right, #7450fe, #21d397);
-    background: -webkit-linear-gradient(left, #7450fe, #21d397);
-    background: linear-gradient(to right, #7450fe, #21d397);
+    background: #5271ff;
+    background: -webkit-linear-gradient(to right, #5271ff, #7ed957);
+    background: -webkit-linear-gradient(left, #5271ff, #7ed957);
+    background: linear-gradient(to right, #5271ff, #7ed957);
     content: '';
     position: absolute;
     width: 100%;
@@ -642,10 +642,10 @@ li {
     display: block;
     position: relative;
     height: 100%;
-    background: #7450fe;
-    background: -webkit-linear-gradient(to right, #7450fe, #21d397);
-    background: -webkit-linear-gradient(left, #7450fe, #21d397);
-    background: linear-gradient(to right, #7450fe, #21d397);
+    background: #5271ff;
+    background: -webkit-linear-gradient(to right, #5271ff, #7ed957);
+    background: -webkit-linear-gradient(left, #5271ff, #7ed957);
+    background: linear-gradient(to right, #5271ff, #7ed957);
     z-index: 1;
 }
 
@@ -691,10 +691,10 @@ li {
 
 .single-service-area i {
     font-size: 40px;
-    background: #7450fe;
-    background: -webkit-linear-gradient(to right, #7450fe, #21d397);
-    background: -webkit-linear-gradient(left, #7450fe, #21d397);
-    background: linear-gradient(to right, #7450fe, #21d397);
+    background: #5271ff;
+    background: -webkit-linear-gradient(to right, #5271ff, #7ed957);
+    background: -webkit-linear-gradient(left, #5271ff, #7ed957);
+    background: linear-gradient(to right, #5271ff, #7ed957);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     -webkit-transition-duration: 500ms;
@@ -745,10 +745,10 @@ li {
 .testimonilas-content span.quote {
     font-size: 120px;
     line-height: 1;
-    background: #7450fe;
-    background: -webkit-linear-gradient(to right, #7450fe, #21d397);
-    background: -webkit-linear-gradient(left, #7450fe, #21d397);
-    background: linear-gradient(to right, #7450fe, #21d397);
+    background: #5271ff;
+    background: -webkit-linear-gradient(to right, #5271ff, #7ed957);
+    background: -webkit-linear-gradient(left, #5271ff, #7ed957);
+    background: linear-gradient(to right, #5271ff, #7ed957);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
@@ -838,7 +838,7 @@ li {
 }
 
 .blog-content > a:hover {
-    color: #7450fe;
+    color: #5271ff;
 }
 
 /* Footer Area CSS */
@@ -886,10 +886,10 @@ li {
     color: #fff;
     text-transform: uppercase;
     font-weight: 600;
-    background: #7450fe;
-    background: -webkit-linear-gradient(to right, #7450fe, #21d397);
-    background: -webkit-linear-gradient(left, #7450fe, #21d397);
-    background: linear-gradient(to right, #7450fe, #21d397);
+    background: #5271ff;
+    background: -webkit-linear-gradient(to right, #5271ff, #7ed957);
+    background: -webkit-linear-gradient(left, #5271ff, #7ed957);
+    background: linear-gradient(to right, #5271ff, #7ed957);
 }
 
 .footer-social-widegt {
@@ -905,7 +905,7 @@ li {
 }
 
 .footer-social-widegt > a:hover {
-    color: #7450fe;
+    color: #5271ff;
 }
 
 .single-tweet a {
@@ -1198,6 +1198,6 @@ li {
 }
 
 .tags-widget > a:hover {
-    background-color: #7450fe;
+    background-color: #5271ff;
     color: #fff;
 }
